--- a/.github/workflows/OpenWrt-Actions.yml
+++ b/.github/workflows/OpenWrt-Actions.yml
@@ -34,9 +34,9 @@ on:
         default: 'false'
         type: boolean
 
-# 定时触发编译(1,5,10,15,20,25,30早9点)
+# 定时触发编译(每周二、四、六早1点)
   schedule:
-    - cron: 0 1 1,5,10,15,20,25,30 * *
+    - cron: 0 17 * * 1,3,5
 
 # 点赞☆Star触发编译
 #  watch:
