--- a/.github/workflows/OpenWrt-Actions.yml
+++ b/.github/workflows/OpenWrt-Actions.yml
@@ -18,6 +18,7 @@ on:
         default: Lean_x86_64
         options:
           - Lean_x86_64
+          - Lean_x86_64_24.01
           - immortalwrt_x86_64
 
       CACHE_BUILD:
@@ -59,7 +60,7 @@ jobs:
       fail-fast: false
       matrix:
         target: ${{ fromJSON(
-          github.event_name == 'schedule' && '["Lean_x86_64","immortalwrt_x86_64"]' ||
+          github.event_name == 'schedule' && '["Lean_x86_64","Lean_x86_64_24.01","immortalwrt_x86_64"]' ||
           format('["{0}"]', github.event.inputs.MODEL )
           )}}
 
