--- a/.github/workflows/OpenWrt-Actions.yml
+++ b/.github/workflows/OpenWrt-Actions.yml
@@ -172,10 +172,12 @@ jobs:
       - name: 缓存加速
         uses: xcz-ns/cachewrtbuild@main
         # uses: stupidloud/cachewrtbuild@main
-        if: env.CACHE_BUILD == 'true' || (github.event.inputs.CACHE_BUILD == 'true')
+        if: ${{ env.CACHE_BUILD == 'true' || github.event.inputs.CACHE_BUILD == 'true' }}
         with:
           ccache: "true"
           prefix: ${{ github.workspace }}/openwrt
+          mixkey: ${{ env.FIRMWARE_MESSAGE }}
+          
 
       - name: 更新时区、编译时间
         id: date
