--- a/.github/workflows/11.yml
+++ b/.github/workflows/11.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: 删除匹配关键字的 Releases 和 Tags
         env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
         run: |
           echo "匹配关键字: $FIRMWARE_MESSAGE"
 
@@ -28,7 +28,7 @@ jobs:
           git config --global user.email "actions@github.com"
 
           # 设置 Git 远程地址为带 Token 的形式，避免 403
-          git remote set-url origin https://${GITHUB_TOKEN}@github.com/${{ github.repository }}
+          git remote set-url origin https://${MY_GITHUB_TOKEN}@github.com/${{ github.repository }}
 
           releases=$(gh api repos/${{ github.repository }}/releases --paginate)
 
