--- a/.github/workflows/OpenWrt-Actions.yml
+++ b/.github/workflows/OpenWrt-Actions.yml
@@ -186,6 +186,7 @@ jobs:
           else
             echo "USE_CACHE=false" >> $GITHUB_ENV
           fi
+          echo "是否使用缓存: $USE_CACHE"
 
       - name: 缓存加速
         uses: xcz-ns/cachewrtbuild@main
