--- a/.github/workflows/OpenWrt-Actions.yml
+++ b/.github/workflows/OpenWrt-Actions.yml
@@ -1,11 +1,3 @@
-#
-#
-# 感谢p3terx大神的一键编译脚本
-#
-# Copyright (C) 2019 P3TERX <https://p3terx.com>
-# <https://github.com/P3TERX/Actions-OpenWrt.git>
-#
-
 name: OpenWrt-Build
 
 on:
@@ -21,6 +13,12 @@ on:
           - Lean_x86_64_24.01
           - Lean_Cudy_18.04
           - immortalwrt_x86_64
+
+      MODELS:
+        description: "输入多个编译目标（英文逗号分隔）"
+        required: false
+        default: Lede_Cudy_18.04,Lean_x86_64_18.04,Lean_x86_64_24.01,immortalwrt_x86_64
+        type: string
 
       CACHE_BUILD:
         description: "缓存加速"
