--- a/.github/workflows/OpenWrt-Actions.yml
+++ b/.github/workflows/OpenWrt-Actions.yml
@@ -7,8 +7,9 @@ on:
         required: true
         description: 选择需要编译的固件
         type: choice
-        default: Lean_x86_64_18.04
+        default: ""
         options:
+          - ""
           - Lean_x86_64_18.04
           - Lean_x86_64_24.01
           - Lean_Cudy_18.04
