--- a/.github/workflows/OpenWrt-Actions.yml
+++ b/.github/workflows/OpenWrt-Actions.yml
@@ -49,7 +49,7 @@ jobs:
       fail-fast: false
       matrix:
         target: ${{ fromJSON(
-          github.event_name == 'schedule' && '["Lede_Cudy_18.04","Lean_x86_64_18.04","Lean_x86_64_24.01","immortalwrt_x86_64"]' ||
+          github.event_name == 'schedule' && '["Lean_Cudy_18.04","Lean_x86_64_18.04","Lean_x86_64_24.01","immortalwrt_x86_64"]' ||
           format('["{0}"]', github.event.inputs.MODEL )
           )}}
 
