--- a/.github/workflows/OpenWrt Build CI.yml
+++ b/.github/workflows/OpenWrt Build CI.yml
@@ -12,7 +12,7 @@ on:
           - Lean_x86_64_18.04
           - Lean_x86_64_24.01
           - Lean_Cudy_18.04
-          - immortalwrt_x86_64
+          - Immortalwrt_x86_64
 
       CACHE_BUILD:
         description: "缓存加速"
@@ -54,7 +54,7 @@ jobs:
       fail-fast: false
       matrix:
         target: ${{ fromJSON(
-          github.event_name == 'schedule' && '["Lean_Cudy_18.04","Lean_x86_64_18.04","Lean_x86_64_24.01","immortalwrt_x86_64"]' ||
+          github.event_name == 'schedule' && '["Lean_Cudy_18.04","Lean_x86_64_18.04","Lean_x86_64_24.01","Immortalwrt_x86_64"]' ||
           format('["{0}"]', github.event.inputs.MODEL )
           )}}
 
