--- a/.github/workflows/编译 OpenWrt 固件.yml
+++ b/.github/workflows/编译 OpenWrt 固件.yml
@@ -33,7 +33,7 @@ on:
 run-name: >-
   ${{ github.event_name == 'workflow_dispatch'
       && format('编译 {0} 固件', inputs.MODEL)
-      || 'OpenWrt 固件编译' }}
+      || 'OpenWrt 固件自动编译' }}
 
 env:
   TZ: Asia/Shanghai
