--- a/.github/workflows/编译 OpenWrt 固件（测试）.yml
+++ b/.github/workflows/编译 OpenWrt 固件（测试）.yml
@@ -85,6 +85,7 @@ jobs:
           #添加变量
           echo "HOME=${GITHUB_WORKSPACE}/openwrt" >> $GITHUB_ENV
           echo "WORKPATH=${GITHUB_WORKSPACE}/openwrt/build/${{matrix.target}}" >> $GITHUB_ENV
+          echo "UPLOAD_TARGETS=true" >> $GITHUB_ENV
 
       - name: 初始化系统环境
         env:
@@ -360,8 +361,8 @@ jobs:
           cp -rf $(find openwrt/bin/packages/ -type f -name "*.ipk") ./artifact/package/ || true
           cp -rf $(find openwrt/bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/ || true        
           # cp -rf $(find openwrt/bin/targets/ -type f -name "*squashfs*efi*img*") ./artifact/firmware/
-          # cp -rf $(find openwrt/bin/targets/ -type f \( -name "*squashfs*efi*img*" -o -name "*squashfs*sysupgrade*bin*" -o -name "*squashfs*factory*bin*" -o -name "*squashfs*img*" \) ) ./artifact/firmware/
-          cp -r openwrt/bin/targets/ ./artifact/firmware/
+          cp -rf $(find openwrt/bin/targets/ -type f \( -name "*squashfs*efi*img*" -o -name "*squashfs*sysupgrade*bin*" -o -name "*squashfs*factory*bin*" -o -name "*squashfs*img*" \) ) ./artifact/firmware/
+          cp -rf openwrt/bin/targets/ ./artifact/targets/
           cp -rf $(find openwrt/bin/targets/ -type f -name "*squashfs*efi*qcow2*") ./artifact/pvekvm/ || true
           cp -rf $(find openwrt/bin/targets/ -type f -name "*squashfs*efi*vhdx*") ./artifact/hyperv/ || true
           cp -rf $(find openwrt/bin/targets/ -type f -name "*squashfs*efi*vmdk*") ./artifact/vmware/ || true
@@ -373,6 +374,13 @@ jobs:
           HOUR=$(( $SECONDS/3600 )) && MIN=$(( ($SECONDS-${HOUR}*3600)/60 )) && SEC=$(( $SECONDS-${HOUR}*3600-${MIN}*60 ))
           echo "BUILD_TIME=${HOUR}时${MIN}分${SEC}秒" >> $GITHUB_ENV
 
+      - name: 上传targets文件夹
+        if: steps.compile.outcome == 'success' && env.UPLOAD_TARGETS == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{matrix.target}}_OpenWrt_targets_${{ env.FILE_TIME }}
+          path: ./artifact/targets/
+          
       - name: 上传固件文件
         if: steps.compile.outcome == 'success' && env.UPLOAD_FIRMWARE == 'true'
         uses: actions/upload-artifact@v4
